Add weathers endpoints
